SERVER-78351 Add $skip optimization for $search $limit $skip pipeline

GitOrigin-RevId: b3ea8c4ffe11673b31439219fb1e0a90002dad89